--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,19 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+.img {
+  width: 370px;
+  margin-top: 50px;
+  justify-content: center;
+}
+
+@media (max-wdith: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .img {
+    width: 100%;
+  }
+}
